# booksmart

./: .gitignore  README.md  booksmart.example.toml  chainlit.md  chainlit_app.py  main.py  pyproject.toml
booksmart/: __init__.py  chunking.py  cli.py  config.py  llm.py  logging_utils.py  pipeline.py  retrieval.py  schemas.py  service.py  storage.py
